data/diff_tests/wasmtime/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2565.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\99\80\80\80\00\02\03\65\6e\76\05\66\75"
    "\6e\63\31\00\00\03\65\6e\76\05\66\75\6e\63\32\00"
    "\00\03\82\80\80\80\00\01\00\0a\98\80\80\80\00\01"
    "\92\80\80\80\00\00\02\40\02\40\02\40\41\03\0e\02"
    "\00\01\02\0b\0b\0b\0b"
  )
""
)